; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/rc/img-ir/extr_img-ir-hw.c_img_ir_begin_repeat.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/rc/img-ir/extr_img-ir-hw.c_img_ir_begin_repeat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.img_ir_priv = type { %struct.img_ir_priv_hw }
%struct.img_ir_priv_hw = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@IMG_IR_M_NORMAL = common dso_local global i64 0, align 8
@IMG_IR_CONTROL = common dso_local global i32 0, align 4
@IMG_IR_M_REPEATING = common dso_local global i64 0, align 8
@RC_FILTER_NORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.img_ir_priv*)* @img_ir_begin_repeat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @img_ir_begin_repeat(%struct.img_ir_priv* %0) #0 {
  %2 = alloca %struct.img_ir_priv*, align 8
  %3 = alloca %struct.img_ir_priv_hw*, align 8
  store %struct.img_ir_priv* %0, %struct.img_ir_priv** %2, align 8
  %4 = load %struct.img_ir_priv*, %struct.img_ir_priv** %2, align 8
  %5 = getelementptr inbounds %struct.img_ir_priv, %struct.img_ir_priv* %4, i32 0, i32 0
  store %struct.img_ir_priv_hw* %5, %struct.img_ir_priv_hw** %3, align 8
  %6 = load %struct.img_ir_priv_hw*, %struct.img_ir_priv_hw** %3, align 8
  %7 = getelementptr inbounds %struct.img_ir_priv_hw, %struct.img_ir_priv_hw* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @IMG_IR_M_NORMAL, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %31

11:                                               ; preds = %1
  %12 = load %struct.img_ir_priv*, %struct.img_ir_priv** %2, align 8
  %13 = load i32, i32* @IMG_IR_CONTROL, align 4
  %14 = call i32 @img_ir_write(%struct.img_ir_priv* %12, i32 %13, i32 0)
  %15 = load i64, i64* @IMG_IR_M_REPEATING, align 8
  %16 = load %struct.img_ir_priv_hw*, %struct.img_ir_priv_hw** %3, align 8
  %17 = getelementptr inbounds %struct.img_ir_priv_hw, %struct.img_ir_priv_hw* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  %18 = load %struct.img_ir_priv*, %struct.img_ir_priv** %2, align 8
  %19 = load %struct.img_ir_priv_hw*, %struct.img_ir_priv_hw** %3, align 8
  %20 = getelementptr inbounds %struct.img_ir_priv_hw, %struct.img_ir_priv_hw* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* @RC_FILTER_NORMAL, align 4
  %23 = call i32 @img_ir_write_timings(%struct.img_ir_priv* %18, i32* %21, i32 %22)
  %24 = load %struct.img_ir_priv*, %struct.img_ir_priv** %2, align 8
  %25 = load i32, i32* @IMG_IR_CONTROL, align 4
  %26 = load %struct.img_ir_priv_hw*, %struct.img_ir_priv_hw** %3, align 8
  %27 = getelementptr inbounds %struct.img_ir_priv_hw, %struct.img_ir_priv_hw* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @img_ir_write(%struct.img_ir_priv* %24, i32 %25, i32 %29)
  br label %31

31:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @img_ir_write(%struct.img_ir_priv*, i32, i32) #1

declare dso_local i32 @img_ir_write_timings(%struct.img_ir_priv*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
